finished most of create profile page

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #000;
-  --foreground: #fff;
+  --background: whitesmoke;
+  --foreground: #1b1b1b;
 
   /* Add font variables from Next.js setup */
   --font-inter: "Inter", sans-serif;
